# DiffuLab

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yaml  spelling.yml  unit_tests.yml
configs/: train_cifar10_flow_matching.yaml  train_imagenet_flow_matching_repa.yaml  train_imagenet_rae_decoder.yaml  train_imagenet_repa_txt_to_img.yaml  train_imagenet_repa_txt_to_img_sprint.yaml  train_mnist_ddpm.yaml  train_mnist_flow_matching.yaml
configs/dataloader/: default.yaml
configs/dataset/: cifar10.yaml  imagenet_latents.yaml  imagenet_noised_latents.yaml  imagenet_repa.yaml  mnist.yaml
configs/diffuser/: gaussian_diffusion.yaml  rectified_flow.yaml
configs/discriminator/: rae.yaml
configs/embedder/: precomputed.yaml  qwen.yaml
configs/model/: ddt.yaml  dit.yaml  mmdit.yaml  sprint.yaml  unet.yaml
configs/optimizer/: adam.yaml  adamw.yaml  sgd.yaml
configs/trainer/: default.yaml
configs/vision_tower/: dcae.yaml  flux2.yaml  rae.yaml
examples/: train_cifar10.py  train_cifar10_flow.py  train_diffusion.py  train_imagenet.py  train_mnist.py  train_mnist_ddpm.py  train_mnist_flow.py  train_rae_decoder.py  train_repa.py  train_repa_txt_to_img.py
notebooks/: test_models.ipynb
src/diffulab/: __init__.py
src/diffulab/datasets/: __init__.py  base.py  cifar10.py  imagenet.py  mnist.py
src/diffulab/diffuse/: __init__.py  diffuser.py  diffusion.py  flow.py  utils.py
src/diffulab/diffuse/modelizations/: __init__.py  diffusion.py  edm.py  flow.py  gaussian_diffusion.py  utils.py
src/diffulab/diffuse/samplers/: __init__.py  common.py
src/diffulab/networks/: __init__.py  common.py
src/diffulab/networks/VAE/: common.py
src/diffulab/networks/denoisers/: __init__.py  common.py  ddt.py  mmddt.py  mmdit.py  sprint.py  unet.py
src/diffulab/networks/disc/: __init__.py  rae.py
src/diffulab/networks/embedders/: __init__.py  common.py  precomputed.py  qwen.py  sd3.py  smolVLM.py  text.py  text_embedders.py
src/diffulab/networks/encoders/: common.py  dinov2.py
src/diffulab/networks/repa/: __init__.py  common.py  dinov2.py  dinov3.py  perceiver_resampler.py
src/diffulab/networks/rewards/: __init__.py  common.py  grpo.py
src/diffulab/networks/utils/: nn.py  utils.py
src/diffulab/networks/vae/: common.py
src/diffulab/networks/vision_towers/: __init__.py  common.py  dc_ae.py  flux2.py  rae.py
src/diffulab/training/: __init__.py  trainer.py  utils.py
src/diffulab/training/losses/: __init__.py  common.py  rae.py  repa.py
src/diffuse/: flow.py  utils.py
src/networks/: common.py  mmdit.py  nn.py  unet.py
src/networks/denoisers/: mmdit.py  unet.py
src/networks/embedders/: text_embedders.py
src/networks/utils/: nn.py
src/training/: trainer.py
tests/: conftest.py
tests/unit_tests/networks/: conftest.py
(+16 files in other folders)
