[project]
name = "diffulab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.0.0",
    "einops>=0.8.0",
    "numpy>=2.1.2",
    "pyright>=1.1.385",
    "ruff>=0.6.9",
    "scipy>=1.14.1",
    "torch>=2.4.1",
    "transformers>=4.45.1",
    "wandb>=0.18.3",
]

[tool.astral]
package = "src" 

[tool.black]
line-length = 120

[tool.ruff]
src = ["src"] # see https://docs.astral.sh/ruff/settings/#src
line-length = 120

[tool.ruff.lint]
select = [
    "I", # isort
]
ignore = [
    "F722", # forward-annotation-syntax-error, because of Jaxtyping
    "E731", # do-not-assign-lambda
]

[tool.ruff.lint.isort]
# Allow this kind of import on a single line:
#
#     from torch import device as Device, dtype as DType
#
combine-as-imports = true

[tool.docformatter]
black = true
