[project]
name = "diffulab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.4.0",
    "einops>=0.8.1",
    "ema-pytorch>=0.7.7",
    "open-clip-torch>=2.30.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "wandb>=0.19.6",
]

[tool.uv.sources]
diffulab = {workspace = true}

[tool.astral]
package = "src" 

[tool.black]
line-length = 120

[tool.ruff]
src = ["src", "examples"]
line-length = 120
format-on-save = true

[tool.ruff.lint]
select = [
    "I", # isort
]
ignore = [
    "F722", # forward-annotation-syntax-error, because of Jaxtyping
    "E731", # do-not-assign-lambda
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pyright]
include = ["src/diffulab", "tests/", "examples/"]
strict = ["*"]
exclude = ["**/__pycache__"]
reportMissingTypeStubs = "warning"
